# unicesumar-aula10-estrutura-de-dados

./: CMakeLists.txt  main.c  readme.md
01_busca_largura/: bfs.c  bfs.h
02_busca_largura_pesos/: bfs_grafo_pesos.c  bfs_grafo_pesos.h
02_dijkstra/: dijkstra.h
03_dijkstra/: dijkstra.c
04_dijkstra_lista/: dijkstra_lista.c  dijkstra_lista.h
